--- a/design.css
+++ b/design.css
@@ -1,33 +1,28 @@
 
 #weapons{
-	width: 50%;
-	height: 130%;
-	font-family: cursive;
-	font-family: monospace;
-	margin-top: 5px;
-	margin-left: 5px;
-	padding-left: 5px;
-	padding-top: 5px;
-	font-size: 150%;
-	float: right;
-	background-color: #CFFB7E;
-	
-}
+    font-family: cursive;
+    font-family: monospace;
+    margin-top: 5px;
+    margin-left: 5px;
+    padding-left: 5px;
+    padding-top: 5px;
+    font-size: 150%;
+    background-color: #CFFB7E;
+    max-height: 350px;
+    overflow-y: auto;
+    }
 
 #robotData{
-	width: 50%;
-	height: 70%;
 	font-family: cursive;
 	font-family: monospace;
 	font-size: 150%;
 }
 
 .containerGeneralDataPlayer{
-	width: 50%;
 	font-size: 150%;
 	font-family: cursive;
 	font-family: monospace;
-	line-height: 100%;
+	line-height: 150%;
 }
 
 .generalTitle{
